syntax = "proto3";

package MonsterPacket;

import "Game.proto";


message MonsterStatus
{  
	int32 ID = 1;
	float HP = 2;
	MonsterData MonsterData = 3;
	MonsterMoveData MoveData = 4;
}
message MonsterAttack {
	int32 skillId = 1;
	int32 frequency = 2;
	GamePacket.InputType InputType = 3;
}
message MonsterSkillInfo{
	repeated MonsterSkill SkillInfo = 1;
}
message MonsterSkill{
	MonsterAttack monsterAttack = 1;
	GamePacket.Skill Skill = 2; 
}
message MonsterMoveData{
	int32 MonsterId = 1;
	GamePacket.MoveData MonsterMove = 3;
}
message S_MonsterList
{
	repeated MonsterStatus MonsterDataList = 1;
}

message MonsterData
{
  int32 monsterId = 1;
  string monsterName = 2;
  float MaxHP = 3;
  float moveSpeed = 4;
  float chaseRange = 5;
  float attackRange = 6;
  MonsterSkillInfo skillInfo = 7;
  float Exp = 8;
  int32 Gold = 9;
}

